install_data([ 'Flat-Fan.edj',
               'Sunset-Hills.edj',

               'Flat-Stone-Pattern.edj',
               'Paper-Flower.edj',

               'Mountain.edj',
               'Sunset-Clouds.edj',
               'Red-Maple.edj',
               'Spruce-Needles.edj',
               'Lichen-Branches.edj',
               'Foggy-Trees.edj',
               'God-Rays.edj',
               'Sea-of-Lanterns.edj',
               'Yellow-Flower.edj',
               'Green-Maple.edj',
               'Peaks.edj',
               'White-Flower.edj',
               'Snow-Trees.edj',
               'Bamboo.edj'
             ],
             install_dir: join_paths(dir_data, 'enlightenment/data/backgrounds')
            )
