install_data([ 'xterm.png',
               'web_browser.png',
               'audio_player.png',
               'mail_client.png',
               'video_player.png',
               'text_editor.png',
               'image_viewer.png',
               'audio_player2.png'
             ],
             install_dir: join_paths(dir_data, 'enlightenment/data/icons')
            )

install_data('enlightenment-askpass.png',
             install_dir: join_paths(dir_data, 'pixmaps')
            )
install_data('enlightenment.svg',
             install_dir: join_paths(dir_data, 'icons/hicolor/scalable/places')
            )
install_data('enlightenment.png',
             install_dir: join_paths(dir_data, 'icons/hicolor/512x512/places')
            )
