install_data([ 'scim.imc',
               'uim.imc',
               'iiimf.imc',
               'ibus.imc',
               'gcin.imc',
               'hime.imc',
               'fcitx.imc'
             ],
             install_dir: join_paths(dir_data, 'enlightenment/data/input_methods')
            )
